blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/Search_Candidate__c.object-meta.xml
<CustomObject>
    <description>One individual considered for one search. Tracks them from longlist to shortlist, client interview, offer and placement. Candidates are Person records. This is the link, with its stage.</description>
    <label>Search candidate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>