blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Assessment_rating__c.field-meta.xml
<CustomField>
    <fullName>Assessment_rating__c</fullName>
    <description>The consultant's rating after the first full interview. Decides whether the candidate reaches the shortlist.</description>
    <label>Assessment rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Marginal</fullName>
            </value>
            <value>
                <fullName>Not suitable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>