blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows every search a person has been considered for. The candidate is a Person with type candidate.</description>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Search candidacies</relationshipLabel>
    <relationshipName>Search_candidacies</relationshipName>
    <type>Lookup</type>
</CustomField>