blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Client_feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_feedback__c</fullName>
    <description>The client's decision after seeing the candidate's profile or meeting them.</description>
    <label>Client feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Want to meet</fullName>
            </value>
            <value>
                <fullName>Not proceeding</fullName>
            </value>
            <value>
                <fullName>Offer wanted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>