blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Client_interview_date__c.field-meta.xml
<CustomField>
    <fullName>Client_interview_date__c</fullName>
    <description>The date of the next or latest interview with the client.</description>
    <label>Client interview date</label>
    <type>Date</type>
</CustomField>