blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Interview_date__c.field-meta.xml
<CustomField>
    <fullName>Interview_date__c</fullName>
    <description>The date of our full interview with the candidate.</description>
    <label>Interview date</label>
    <type>Date</type>
</CustomField>