blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Motivation__c.field-meta.xml
<CustomField>
    <fullName>Motivation__c</fullName>
    <description>How open the candidate is to moving. Used to prioritise outreach.</description>
    <label>Motivation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actively looking</fullName>
            </value>
            <value>
                <fullName>Open to move</fullName>
            </value>
            <value>
                <fullName>Would consider for the right role</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>