blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Offered_compensation__c.field-meta.xml
<CustomField>
    <fullName>Offered_compensation__c</fullName>
    <description>First-year total pay in the offer. Confirms the fee basis.</description>
    <label>Offered compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>