blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Out_reason__c.field-meta.xml
<CustomField>
    <fullName>Out_reason__c</fullName>
    <description>Why the candidate left the search. Required on the out stage.</description>
    <label>Out reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined approach</fullName>
            </value>
            <value>
                <fullName>Not suitable on assessment</fullName>
            </value>
            <value>
                <fullName>Client did not proceed</fullName>
            </value>
            <value>
                <fullName>Withdrew</fullName>
            </value>
            <value>
                <fullName>Accepted another role</fullName>
            </value>
            <value>
                <fullName>Offer declined</fullName>
            </value>
            <value>
                <fullName>Off-limits</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>