blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Outreach_date__c.field-meta.xml
<CustomField>
    <fullName>Outreach_date__c</fullName>
    <description>The date of the first approach to the candidate.</description>
    <label>Outreach date</label>
    <type>Date</type>
</CustomField>