blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/References_complete__c.field-meta.xml
<CustomField>
    <fullName>References_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Referee checks are done and held in the document system. Record completion only.</description>
    <label>References complete</label>
    <type>Checkbox</type>
</CustomField>