blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Search__c.field-meta.xml
<CustomField>
    <fullName>Search__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lists every individual considered for the search, with their stage.</description>
    <label>Search</label>
    <referenceTo>Search__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>