blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>How the candidate came to this search. Used to see which channels produce shortlisted people.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market mapping</fullName>
            </value>
            <value>
                <fullName>Network referral</fullName>
            </value>
            <value>
                <fullName>Inbound application</fullName>
            </value>
            <value>
                <fullName>Client suggestion</fullName>
            </value>
            <value>
                <fullName>Our database</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>