blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Where the record is in its pipeline. Restricted to the pipeline's stages.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Approached</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Assessed</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Client interview</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>