blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>The day the candidate starts. Triggers the final fee instalment where the fee is tied to placement.</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>