blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/validationRules/Gate_candidate_progress_approached.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_candidate_progress_approached</fullName>
    <active>true</active>
    <description>Stage gate: Candidate progress, Approached and later stages need Outreach date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Identified", 1, "Approached", 2, "Engaged", 3, "Assessed", 4, "Shortlisted", 5, "Client interview", 6, "Offer", 7, "Placed", 8, 0) &gt;= 2, ISBLANK(Outreach_date__c))</errorConditionFormula>
    <errorDisplayField>Outreach_date__c</errorDisplayField>
    <errorMessage>Fill in Outreach date before moving to Approached.</errorMessage>
</ValidationRule>