blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/validationRules/Gate_candidate_progress_assessed.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_candidate_progress_assessed</fullName>
    <active>true</active>
    <description>Stage gate: Candidate progress, Assessed and later stages need Interview date and Assessment rating.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Identified", 1, "Approached", 2, "Engaged", 3, "Assessed", 4, "Shortlisted", 5, "Client interview", 6, "Offer", 7, "Placed", 8, 0) &gt;= 4, OR(ISBLANK(Interview_date__c), ISBLANK(TEXT(Assessment_rating__c))))</errorConditionFormula>
    <errorMessage>Fill in Interview date and Assessment rating before moving to Assessed.</errorMessage>
</ValidationRule>