blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/validationRules/Gate_candidate_progress_client_interview.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_candidate_progress_client_interview</fullName>
    <active>true</active>
    <description>Stage gate: Candidate progress, Client interview and later stages need Client interview date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Identified", 1, "Approached", 2, "Engaged", 3, "Assessed", 4, "Shortlisted", 5, "Client interview", 6, "Offer", 7, "Placed", 8, 0) &gt;= 6, ISBLANK(Client_interview_date__c))</errorConditionFormula>
    <errorDisplayField>Client_interview_date__c</errorDisplayField>
    <errorMessage>Fill in Client interview date before moving to Client interview.</errorMessage>
</ValidationRule>