blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/validationRules/Gate_candidate_progress_engaged.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_candidate_progress_engaged</fullName>
    <active>true</active>
    <description>Stage gate: Candidate progress, Engaged and later stages need Motivation.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Identified", 1, "Approached", 2, "Engaged", 3, "Assessed", 4, "Shortlisted", 5, "Client interview", 6, "Offer", 7, "Placed", 8, 0) &gt;= 3, ISBLANK(TEXT(Motivation__c)))</errorConditionFormula>
    <errorDisplayField>Motivation__c</errorDisplayField>
    <errorMessage>Fill in Motivation before moving to Engaged.</errorMessage>
</ValidationRule>