blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/validationRules/Gate_candidate_progress_identified.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_candidate_progress_identified</fullName>
    <active>true</active>
    <description>Stage gate: Candidate progress, Identified and later stages need Source.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Identified", 1, "Approached", 2, "Engaged", 3, "Assessed", 4, "Shortlisted", 5, "Client interview", 6, "Offer", 7, "Placed", 8, 0) &gt;= 1, ISBLANK(TEXT(Source__c)))</errorConditionFormula>
    <errorDisplayField>Source__c</errorDisplayField>
    <errorMessage>Fill in Source before moving to Identified.</errorMessage>
</ValidationRule>