blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/validationRules/Gate_candidate_progress_offer.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_candidate_progress_offer</fullName>
    <active>true</active>
    <description>Stage gate: Candidate progress, Offer and later stages need Offered compensation.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Identified", 1, "Approached", 2, "Engaged", 3, "Assessed", 4, "Shortlisted", 5, "Client interview", 6, "Offer", 7, "Placed", 8, 0) &gt;= 7, ISBLANK(Offered_compensation__c))</errorConditionFormula>
    <errorDisplayField>Offered_compensation__c</errorDisplayField>
    <errorMessage>Fill in Offered compensation before moving to Offer.</errorMessage>
</ValidationRule>