blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/validationRules/Gate_candidate_progress_shortlisted.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_candidate_progress_shortlisted</fullName>
    <active>true</active>
    <description>Stage gate: Candidate progress, Shortlisted and later stages need Assessment rating and Client feedback.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Identified", 1, "Approached", 2, "Engaged", 3, "Assessed", 4, "Shortlisted", 5, "Client interview", 6, "Offer", 7, "Placed", 8, 0) &gt;= 5, OR(ISBLANK(TEXT(Assessment_rating__c)), ISBLANK(TEXT(Client_feedback__c))))</errorConditionFormula>
    <errorMessage>Fill in Assessment rating and Client feedback before moving to Shortlisted.</errorMessage>
</ValidationRule>