blueprints/executive-search/salesforce/force-app/main/default/objects/Search_Candidate__c/validationRules/Lost_candidate_progress_out.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_candidate_progress_out</fullName>
    <active>true</active>
    <description>Lost reason: Candidate progress, Out needs Out reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Out"), ISBLANK(TEXT(Out_reason__c)))</errorConditionFormula>
    <errorDisplayField>Out_reason__c</errorDisplayField>
    <errorMessage>Fill in Out reason before closing this as Out.</errorMessage>
</ValidationRule>